--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,18 @@ code {
 
 }
 
+.paginationBttns{
+
+@apply flex gap-6 text-2xl border-2 border-[aliceblue] border-solid
+ hover:text-emerald-300
+}
+
+
+
+
 
 
 }
+
+
+
